# credential-gateway

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
admin_ui/: index.html
client_sdk/: client.py  key_utils.py
client_ui/: index.html
docker/: Dockerfile  entrypoint.sh
docs/: ADMIN_GUIDE.md  USER_GUIDE.md
migrations/: env.py
src/: config.py  database.py  main.py
src/api/v1/: applications.py  credentials.py  health.py
src/crypto/: ecc_manager.py  encryption.py  hashing.py
src/middleware/: auth.py  logging.py  ratelimit.py
src/models/: __init__.py  access_log.py  application.py  credential.py
src/services/: audit_service.py  auth_service.py  credential_service.py
src/services/processors/: __init__.py  api_key.py  base.py  cloud_key.py  db_password.py  generic.py  ssh_key.py
src/utils/: exceptions.py  validators.py
tests/: conftest.py  test_auth.py  test_credentials.py  test_crypto.py
