[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "credential-gateway"
version = "0.1.0"
description = "Zero-knowledge credential vault with Ed25519 auth and ECIES encryption"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "aiosqlite>=0.20,<1.0",
    "alembic>=1.13,<2.0",
    "redis[hiredis]>=5.0,<6.0",
    "cryptography>=42.0,<44.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
]

[tool.setuptools.packages.find]
include = ["src*", "client_sdk*"]